[gd_scene load_steps=5 format=3 uid="uid://cdwvtbtwmrqbn"]

[ext_resource type="Script" path="res://scenes/PauseMenu/PauseMenu.gd" id="2"]
[ext_resource type="Script" path="res://addons/rakugo_game_template/base/scripts/CaptureFocus.gd" id="3_43rgy"]
[ext_resource type="Script" path="res://addons/rakugo_game_template/base/scripts/UISoundController.gd" id="3_hgthy"]
[ext_resource type="PackedScene" uid="uid://djnvp4x64ukay" path="res://scenes/OptionsMenu/OptionsContainer.tscn" id="4_pyl8d"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="UISoundController" type="Node" parent="."]
script = ExtResource("3_hgthy")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16

[node name="Title" type="Label" parent="MenuContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Pause"
horizontal_alignment = 1

[node name="MenuButtons" type="VBoxContainer" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 16
alignment = 1
script = ExtResource("3_43rgy")

[node name="ResumeButton" type="Button" parent="MenuContainer/VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
text = "Resume"

[node name="RestartButton" type="Button" parent="MenuContainer/VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
text = "Restart"

[node name="OptionsButton" type="Button" parent="MenuContainer/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
text = "Options"

[node name="MainMenuButton" type="Button" parent="MenuContainer/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
text = "Main Menu"

[node name="ExitButton" type="Button" parent="MenuContainer/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
text = "Exit Game"

[node name="SubMenuContainer" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(360, 360)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SubMenuContainer"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -203.5
offset_bottom = 203.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="OptionsContainer" parent="SubMenuContainer/VBoxContainer" instance=ExtResource("4_pyl8d")]
visible = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SubMenuContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BackButton" type="Button" parent="SubMenuContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(62, 40)
layout_mode = 2
text = "Back"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
initial_position = 2

[connection signal="pressed" from="MenuContainer/VBoxContainer/MenuButtons/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/MenuButtons/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/MenuButtons/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/MenuButtons/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/MenuButtons/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="SubMenuContainer/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
